maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:12: error: ';' expected but 'else' found.
			}else{
                         ^