maze.lessons.maze.wallfollower.WallFollowerMaze.scala.code
override def run() {

def keepHandOnSideWall(){
	gauche();
	if(estFaceMur()){
			droite();
			if(estFaceMur()){
							droite()
							}else{
							avance();
			}else{
				gauche();
				avance();	
			}
	}
}
while(!estSurBiscuit()){
	keepHandOnSideWall();
}
prendBiscuit();
}
